<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Dementia</string>
	<string-array name="medicineType">
		<item>Enter Medicine Type</item>
		<item>Tablet</item>
		<item>Liquid</item>
		<item>Capsules</item>
		<item>Drop</item>
	</string-array>
	<string name="title_activity_maps">MapsActivity</string>
	<string name="api_key" tools:ignore="Typos">AIzaSyDKaXXfINHt1LfiEqJLy0WNQikRPwRHURc</string>
	
	<string-array name="userType">
		<item>Care Taker</item>
		<item>Patient</item>
	</string-array>
	
	<string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
	<string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
	<string name="permission_required_toast">Location permission is required for this demo.</string>
	<string name="email">Email</string>
	<string name="register">Register</string>
	<string name="login">Login</string>
	<string name="forgot_password">Forgot password?</string>
	<string name="already_have_an_account">Already have an account. Sign in here</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="or_sign_in_with">or sign in with</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_up">Sign Up</string>
	<string name="user_type">User Type</string>
	<string name="title_activity_track_patient_maps">TrackPatientMapsActivity</string>
</resources>