<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	tools:context=".Register">
	
	<LinearLayout
		android:layout_width="300dp"
		android:layout_height="match_parent"
		android:layout_centerInParent="true"
		android:layout_marginStart="1dp"
		android:layout_marginTop="1dp"
		android:layout_marginEnd="1dp"
		android:layout_marginBottom="1dp"
		android:orientation="vertical"
		android:weightSum="15"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.494"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0">
		
		<TextView
			android:id="@+id/signup"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="20dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/sign_up"
			android:textColor="@color/white"
			android:textSize="35sp"
			android:textStyle="bold" />
		
		<EditText
			android:id="@+id/editTextTextEmailAddress"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="#26FFFFFF"
			android:drawableStart="@drawable/baseline_email_24"
			android:drawablePadding="20dp"
			android:hint="@string/email"
			android:importantForAutofill="no"
			android:inputType="textEmailAddress"
			android:padding="10dp"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
		
		<EditText
			android:id="@+id/editTextTextPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="5dp"
			android:layout_weight="1"
			android:background="#30ffffff"
			android:drawableStart="@drawable/baseline_info_24"
			android:drawablePadding="20dp"
			android:hint="@string/password"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
		
		<EditText
			android:id="@+id/editTextTextConfirmPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="#30ffffff"
			android:drawableStart="@drawable/baseline_info_24"
			android:drawablePadding="20dp"
			android:hint="@string/confirm_password"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:padding="10dp"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
		
		
		<Spinner
			android:id="@+id/spinnerUserType"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:layout_weight="7"
			android:background="#30ffffff"
			android:spinnerMode="dropdown"
			android:textColor="@color/white"
			android:textColorHint="@color/white"
			android:contentDescription="@string/user_type"/>
		
		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/buttonRegister"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@color/teal_200"
			android:backgroundTint="@color/teal_200"
			android:padding="10dp"
			android:text="@string/login"
			android:textColor="#000000" />
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1">
			
			<TextView
				android:id="@+id/forgotpass"
				android:layout_width="100dp"
				android:layout_height="90dp"
				android:layout_margin="10dp"
				android:background="#1126E4"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/forgot_password"
				android:textColor="@color/white"
				android:textSize="14sp"
				android:padding="5dp"/>
			
			<TextView
				android:id="@+id/alreadyHaveAnAccount"
				android:layout_width="160dp"
				android:layout_height="90dp"
				android:layout_margin="10dp"
				android:background="#1126E4"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/already_have_an_account"
				android:textColor="@color/white"
				android:textSize="16sp"
				android:padding="5dp"/>
		
		</LinearLayout>
		
		
		<TextView
			android:id="@+id/others"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/or_sign_in_with"
			android:textColor="@color/black"
			android:textSize="20sp" />
		
		<LinearLayout
			android:id="@+id/socialicons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:layout_weight="1"
			android:gravity="center">
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/google"
				tools:ignore="ContentDescription" />
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/fb"
				tools:ignore="ContentDescription" />
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/twitter"
				tools:ignore="ContentDescription,ImageContrastCheck" />
		
		</LinearLayout>
	
	</LinearLayout>
</RelativeLayout>