<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/background"
	tools:context=".Login">
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:layout_centerInParent="true"
		android:weightSum="7"
		android:layout_marginStart="1dp"
		android:layout_marginTop="1dp"
		android:layout_marginEnd="1dp"
		android:layout_marginBottom="1dp"
		android:orientation="vertical"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">
		
		<TextView
			android:id="@+id/signin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="30dp"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/sign_in"
			android:textColor="@color/white"
			android:textSize="35sp"
			android:textStyle="bold" />
		
		
		<EditText
			android:id="@+id/editTextTextEmailAddressLogin"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_margin="10dp"
			android:background="#30ffffff"
			android:drawableStart="@drawable/baseline_email_24"
			android:drawablePadding="20dp"
			android:hint="@string/email"
			android:importantForAutofill="no"
			android:inputType="textEmailAddress"
			android:padding="20dp"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
		
		<EditText
			android:id="@+id/editTextTextPasswordLogin"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_margin="10dp"
			android:background="#30ffffff"
			android:drawableStart="@drawable/baseline_info_24"
			android:drawablePadding="20dp"
			android:hint="@string/password"
			android:importantForAutofill="no"
			android:inputType="textPassword"
			android:padding="20dp"
			android:textColor="@color/white"
			android:textColorHint="@color/white" />
		
		<Button
			android:id="@+id/buttonLoginSign"
			android:layout_width="300dp"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:background="@color/teal_200"
			android:backgroundTint="@color/teal_200"
			android:text="@string/login"
			android:textColor="#000000" />
		
		<TextView
			android:id="@+id/forgotpass"
			android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:layout_margin="20dp"
			android:clickable="true"
			android:focusable="true"
			android:text="@string/forgot_password"
			android:textColor="@color/white"
			android:textSize="20sp" />
		
		<TextView
			android:id="@+id/others"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:text="@string/or_sign_in_with"
			android:textColor="@color/black"
			android:gravity="bottom"
			android:textSize="20sp" />
		
		<LinearLayout
			android:id="@+id/socialicons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_weight="1">
			
			
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/google"
				tools:ignore="ContentDescription" />
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/fb"
				tools:ignore="ContentDescription" />
			
			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_margin="20dp"
				android:src="@drawable/twitter"
				tools:ignore="ContentDescription,ImageContrastCheck" />
		
		</LinearLayout>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>